objects/tffa__RecommendationConfigurationItem__c.object
<CustomObject>
    <description>Holds a reference to the recommended product.</description>
    <fields>
        <fullName>tffa__Configuration__c</fullName>
        <description>Reference to parent configuration.</description>
        <label>Configuration</label>
        <referenceTo>tffa__RecommendationConfiguration__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Information about the product. Usually contextual describing why the product was recommended.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures explicit disabling of recommendation item.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MaximumQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Upper bound on quantity of product selected in cross-sell screen.</description>
        <label>Maximum quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to recommended product</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product not active.</errorMessage>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Recommendation Configuration Items</relationshipLabel>
        <relationshipName>RecommendationConfigurationItems</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Relative order of the item. Signifies relative importance among list of recommended products.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Recommendation Configuration Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recommendation Configuration Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>